--- a/src/templates/components/footer/_footer.scss
+++ b/src/templates/components/footer/_footer.scss
@@ -160,6 +160,7 @@
   .footer {
     padding-top: 12rem;
     padding-bottom: 12rem;
+    border-top: none;
 
     &__main {
       padding-bottom: 0;
