--- a/src/templates/components/donut-chart/donut-chart.pug
+++ b/src/templates/components/donut-chart/donut-chart.pug
@@ -10,16 +10,16 @@ mixin donut-chart(options)
         span.donut-chart__main-counter= counter
         | голосов
       svg.donut-chart__content(width = "100", height = "100", viewBox = "0 0 100 100")
-        linearGradient(id="yellowGradient" x1="0", y1="0," x2="100%", y2="0")
+        linearGradient(id="yellowGradient" x1="0", y1="0" x2="100%", y2="0")
           stop(offset="0%", stop-color="hsl(43, 100%, 81%)")
           stop(offset="100%", stop-color="hsl(18, 100%, 81%)")
-        linearGradient(id="darkGradient" x1="100%", y1="0%," x2="0", y2="0")
+        linearGradient(id="darkGradient" x1="100%", y1="0" x2="0", y2="0")
           stop(offset="0%", stop-color="hsl(0, 0%, 57%)")
           stop(offset="100%", stop-color="hsl(227, 31%, 35%)")
-        linearGradient(id="purpleGradient" x1="100%", y1="0," x2="0", y2="0")
+        linearGradient(id="purpleGradient" x1="100%", y1="0" x2="0", y2="0")
           stop(offset="0%", stop-color="hsl(259, 100%, 81%)")
           stop(offset="100%", stop-color="hsl(226, 90%, 76%)")
-        linearGradient(id="greenGradient" x1="100%", y1="0," x2="0", y2="0")
+        linearGradient(id="greenGradient" x1="100%", y1="0" x2="0", y2="0")
           stop(offset="0%", stop-color="hsl(145, 50%, 62%)")
           stop(offset="100%", stop-color="hsl(191, 76%, 66%)")
         each unit in units
