--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -15,13 +15,14 @@
 
 .page-login {
   margin: 0;
+  min-height: 100vh;
+  @include flex-column();
   @include set-font(1.4rem, 400, 2.4rem, $darkShade75, Montserrat);
-  min-height: 100%;
   background-color: hsl(0, 0%, 90%);
 
   &__container {
-    width: 80%;
-    max-width: 1160px;
+    width: 81%;
+    max-width: 1920px;
     margin: 0 auto;
   }
 
@@ -39,9 +40,13 @@
       @include flex-center();
     }
   }
+
+  &__footer{
+    margin-top: auto;
+  }
 }
 
-@media(max-width: 768px) {
+@media(max-width: 767px) {
   .document-login-page {
     font-size: 57%;
   }
@@ -53,7 +58,7 @@
   }
 }
 
-@media(max-width: 375px) {
+@media(max-width: 374px) {
   .document-login-page {
     font-size: 53%;
   }
