--- a/src/templates/components/room-card/_room-card.scss
+++ b/src/templates/components/room-card/_room-card.scss
@@ -1,5 +1,7 @@
 .room-card {
   width: 100%;
+  min-width: 270px;
+  max-width: 600px;
   box-shadow: 0 1rem 2rem $darkShade5;
   border-radius: 0.4rem;
   background-color: #fff;
