Modified webpack config, added favicon

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -45,7 +45,7 @@ block content
     .page-ui-kit__container
       .colors-type__content
         .colors-type__logo
-          img.colors-type__image(src = "../../icons/toxin-uikit-logo.svg")
+          img.colors-type__image(src = "./img/toxin-uikit-logo.svg")
         .colors-type__colors-group
           +colors-item({
             color: "darkshade_100",
@@ -104,7 +104,7 @@ block content
     .page-ui-kit__container
       .form-elements__content
         .form-elements__logo
-          img.form-elements__image(src = "../../icons/toxin-uikit-logo.svg")
+          img.form-elements__image(src = "./img/toxin-uikit-logo.svg")
         .form-elements__row
           .form-elements__text-fields 
             .form-elements__text-fields-top
@@ -495,7 +495,7 @@ block content
     .page-ui-kit__container
       .cards__content
         .cards__logo
-          img.cards__image(src = "../../icons/toxin-uikit-logo.svg")
+          img.cards__image(src = "./img/toxin-uikit-logo.svg")
         .cards__col
           +search-panel({
             action: "add/link/to/server",
@@ -578,7 +578,7 @@ block content
   section.headers-footers
       .headers-footers__content
         .headers-footers__logo
-          img.headers-footers__image(src = "../../icons/toxin-uikit-logo.svg")
+          img.headers-footers__image(src = "./img/toxin-uikit-logo.svg")
         .headers-footers__header
           +header({
             menuItems: [
