Modified pages, checkbox, main-button, subscription-field, toggle and footer components

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -607,7 +607,7 @@ block content
         .headers-footers__footer
           +footer({
             menu: [
-              {subtitle: "навигация", listItems: ["о нас", "новости", "слажба подержки", "услуги"]},
+              {subtitle: "навигация", listItems: ["о нас", "новости", "служба поддержки", "услуги"]},
               {subtitle: "о нас", listItems: ["о сервисе", "наша команда", "вакансии", "инвесторы"]},
               {subtitle: "служба поддержки", listItems: ["соглашения", "сообщества", "связь с нами"]}
             ],
