--- a/src/templates/components/main-button/_main-button.scss
+++ b/src/templates/components/main-button/_main-button.scss
@@ -14,6 +14,7 @@
     @include set-size(100%);
     @include flex-center();
     letter-spacing: -0.18px;
+    word-break: break-word;
 
     &_side-padding_large {
       padding-left: 2.6rem;
