--- a/src/templates/components/toggle/_toggle.scss
+++ b/src/templates/components/toggle/_toggle.scss
@@ -21,7 +21,7 @@
       top: 50%;
       left: 10%;
       transform: translateY(-50%);
-      @include set-size(28.5%, 66.7%);
+      @include set-size(1.2rem);
       background: $darkShade25;
       border-radius: 50%;
       transition: left 0.5s;
