Modified pages and refactored components

--- a/src/pages/catalog/catalog.pug
+++ b/src/pages/catalog/catalog.pug
@@ -56,7 +56,7 @@ block content
               })
             .main-content__guests
               +dropdown({
-                isBig: true,
+                hasButtons: true,
                 contentName: "guests",
                 field: {
                   isRequired: true,
