--- a/src/templates/components/datepicker-block/datepicker-block.pug
+++ b/src/templates/components/datepicker-block/datepicker-block.pug
@@ -55,7 +55,7 @@ mixin datepicker-block(options)
             mask: "date"
           })
       else 
-        .datepicker-block__field.datepicker-block__field_big
+        .datepicker-block__field
           +text-field({
             isActive: field1.isActive,
             btn: {icon: "expand_more"},
