--- a/src/templates/components/reservation-panel/reservation-panel.pug
+++ b/src/templates/components/reservation-panel/reservation-panel.pug
@@ -59,7 +59,7 @@ mixin reservation-panel(options)
         })
       .reservation-panel__dropdown
         +dropdown({
-          isBig: true,
+          hasButtons: true,
           contentName: "guests",
           field: {
             isRequired: true,
