--- a/src/templates/components/search-panel/search-panel.pug
+++ b/src/templates/components/search-panel/search-panel.pug
@@ -32,7 +32,7 @@ mixin search-panel(options)
         })
       .search-panel__dropdown
         +dropdown({
-          isBig: true,
+          hasButtons: true,
           contentName: "guests",
           field: {
             isRequired: true,
