--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -98,7 +98,7 @@
     &-item {
       max-width: 320px;
 
-      &_subscription {
+      &_small {
         max-width: 267px;
       }
     }
@@ -128,6 +128,7 @@
   }
 
   &__small-dropdowns {
+    max-width: 266px;
     min-height: 26rem;
     @include flex-column($gap: 2rem);
   }
@@ -273,7 +274,7 @@
 
   &__content {
     position: relative;
-    @include set-flex($gap: 4rem, $flexWrap: wrap);
+    @include set-flex($mainAxis: space-between, $gap: 1%, $flexWrap: wrap);
   }
 
   &__logo {
@@ -293,6 +294,14 @@
     &:nth-of-type(3) {
       margin-top: 0.4rem;
     }
+  }
+
+  &__calendar {
+    max-width: 320px;
+  }
+
+  &__room-card {
+    max-width: 270px;
   }
 }
 
