--- a/src/templates/components/dropdown/dropdown.pug
+++ b/src/templates/components/dropdown/dropdown.pug
@@ -2,7 +2,7 @@ include ../main-button/main-button
 include ../text-field/text-field
 
 //- 
-  isBig - deifnes, whether dropdown is big or not
+  hasButtons - defines, whether dropdown has bottom action buttons or not
   isExpanded - defines, whether dropdown is expanded or not
   contentName - value for data-content attribute
   menuItems - array of items at dropdown menu
@@ -11,10 +11,9 @@ mixin dropdown(options)
   if !options
     - options = {}
 
-  - const {isBig, isExpanded, contentName, field: {isActive, isEachBorderRounded, label, state, name = contentName, placeholder = {}, value, isRequired} = {}, menuItems} = options
+  - const {hasButtons, isExpanded, contentName, field: {isActive, isEachBorderRounded, label, state, name = contentName, placeholder = {}, value, isRequired} = {}, menuItems} = options
 
   .dropdown(
-    class = isBig ? "dropdown_big" : "",
     class = isExpanded ? "dropdown_expanded" : "",
     data-content = contentName
   )
@@ -49,7 +48,7 @@ mixin dropdown(options)
                     button.dropdown__item-button-minus(disabled = +item.count < 1 ? true : false, type = "button")= "-"
                     span.dropdown__item-counter= item.count
                     button.dropdown__item-button-plus(disabled = +item.count > 4 ? true : false, type = "button")= "+"
-            if isBig 
+            if hasButtons 
               .dropdown__buttons 
                 .dropdown__button-clear(class = (totalCount === 0) ? "dropdown__button-clear_hidden" : "")
                   +main-button({style: "simple", text: "очистить"})
