--- a/src/pages/catalog/catalog.pug
+++ b/src/pages/catalog/catalog.pug
@@ -12,6 +12,7 @@ block variables
 block includes
   include ../../templates/components/h1-title/h1-title
   include ../../templates/components/h3-label-cta-text/h3-label-cta-text
+  include ../../templates/components/h3-label-cta-text/h3-label-cta-text
   include ../../templates/components/checkbox/checkbox
   include ../../templates/components/expandable-checkbox-list/expandable-checkbox-list
   include ../../templates/components/range-slider/range-slider
