--- a/src/templates/components/calendar/calendar.scss
+++ b/src/templates/components/calendar/calendar.scss
@@ -1,5 +1,6 @@
 .calendar {
   width: 100%;
+  min-width: 320px;
   max-width: 600px;
   box-shadow: 0 1rem 2rem $darkShade5;
   background-color: #fff;
@@ -180,7 +181,7 @@
 
   &--cell {
     &-day {
-      padding: 4.5% 0;
+      min-height: 40px;
     }
   }
 }
